Update dependencies and add missing gRPC components for v1.0.11