@@ -5,12 +5,12 @@
 
 package org.signal.registration.analytics.gcp.bigtable;
 
+import com.google.cloud.bigtable.data.v2.models.TableId;
 import com.google.cloud.bigtable.data.v2.BigtableDataClient;
 import com.google.cloud.bigtable.data.v2.models.Query;
 import com.google.cloud.bigtable.data.v2.models.Row;
 import com.google.cloud.bigtable.data.v2.models.RowCell;
 import com.google.cloud.bigtable.data.v2.models.RowMutation;
-import com.google.cloud.bigtable.data.v2.models.TableId;
 import com.google.protobuf.ByteString;
 import com.google.protobuf.InvalidProtocolBufferException;
 import io.micrometer.core.instrument.MeterRegistry;
@@ -42,7 +42,7 @@ public class BigtableAttemptPendingAnalysisRepository implements AttemptPendingA
   private final Executor executor;
   private final MeterRegistry meterRegistry;
 
-  private final TableId tableId;
+  private final com.google.cloud.bigtable.data.v2.models.TableId tableId;
   private final String columnFamilyName;
 
   private static final ByteString DATA_COLUMN_NAME = ByteString.copyFromUtf8("D");
@@ -67,7 +67,7 @@ public class BigtableAttemptPendingAnalysisRepository implements AttemptPendingA
     this.bigtableDataClient = bigtableDataClient;
     this.executor = executor;
 
-    this.tableId = TableId.of(configuration.tableId());
+    this.tableId = com.google.cloud.bigtable.data.v2.models.TableId.of(configuration.tableId());
     this.columnFamilyName = configuration.columnFamilyName();
     this.meterRegistry = meterRegistry;
   }
@@ -122,7 +122,7 @@ public class BigtableAttemptPendingAnalysisRepository implements AttemptPendingA
     }
 
     try {
-      return AttemptPendingAnalysis.parseFrom(cells.getFirst().getValue());
+      return AttemptPendingAnalysis.parseFrom(cells.get(0).getValue());
     } catch (final InvalidProtocolBufferException e) {
       throw new UncheckedIOException(e);
     }
